Add payment methods to swagger
