# raiden-swagger-sdk/models/Payment.ts
@@ -1,0 +1,31 @@
+// tslint:disable
+/**
+ * Raiden API
+ * https://raiden-network.readthedocs.io/en/stable/rest_api.html
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ * @export
+ * @interface Payment
+ */
+export interface Payment {
+  /**
+   * Amount to be sent to the target
+   * @type {number}
+   * @memberof Payment
+   */
+  amount: number;
+  /**
+   * Identifier of the payment
+   * @type {number}
+   * @memberof Payment
+   */
+  identifier?: number;
+}
