# raiden-swagger-sdk/models/PaymentReceipt.ts
@@ -1,0 +1,49 @@
+// tslint:disable
+/**
+ * Raiden API
+ * https://raiden-network.readthedocs.io/en/stable/rest_api.html
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ * @export
+ * @interface PaymentReceipt
+ */
+export interface PaymentReceipt {
+  /**
+   *
+   * @type {string}
+   * @memberof PaymentReceipt
+   */
+  initiatorAddress: string;
+  /**
+   *
+   * @type {string}
+   * @memberof PaymentReceipt
+   */
+  targetAddress: string;
+  /**
+   *
+   * @type {string}
+   * @memberof PaymentReceipt
+   */
+  tokenAddress: string;
+  /**
+   *
+   * @type {number}
+   * @memberof PaymentReceipt
+   */
+  amount: number;
+  /**
+   *
+   * @type {number}
+   * @memberof PaymentReceipt
+   */
+  identifier: number;
+}
