# raiden-swagger-sdk/models/index.ts
@@ -8,5 +8,7 @@ export * from "./Connection";
 export * from "./Errors";
 export * from "./InlineObject";
 export * from "./Partner";
+export * from "./Payment";
+export * from "./PaymentReceipt";
 export * from "./PendingTransfer";
 export * from "./TokenNetworkAddress";
